Move to makefile, do initial excludes

--- a/gometalinter.config
+++ b/gometalinter.config
@@ -1,1 +1,11 @@
-{}
+{
+    "Disable": [
+        "gocyclo",
+        "maligned",
+        "megacheck"
+    ],
+    "Exclude": [
+        "don't use underscores in Go names",
+        "exported type .+ should have comment or be unexported"
+    ]
+}
