--- a/tools/collector-generator/collector.template
+++ b/tools/collector-generator/collector.template
@@ -1,5 +1,3 @@
-// returns data points from {{ .Class }}
-// <add link to documentation here> - {{ .Class }} class
 package collector
 import (
     "github.com/StackExchange/wmi"
@@ -38,6 +36,8 @@ func (c *{{ .CollectorName }}Collector) Collect(ch chan<- prometheus.Metric) err
     }
     return nil
 }
+// {{ .Class }} docs:
+// - <add link to documentation here>
 type {{ .Class }} struct {
     Name string
 {{ range $m := .Members }}
