Lint-fix: Final golint, ignore capitalisation rules

--- a/gometalinter.config
+++ b/gometalinter.config
@@ -6,6 +6,7 @@
     ],
     "Exclude": [
         "don't use underscores in Go names",
-        "exported type .+ should have comment or be unexported"
+        "exported type .+ should have comment or be unexported",
+        "should be"
     ]
 }
