Lint-fix: Ignore goconst

--- a/gometalinter.config
+++ b/gometalinter.config
@@ -2,7 +2,8 @@
     "Disable": [
         "gocyclo",
         "maligned",
-        "megacheck"
+        "megacheck",
+        "goconst"
     ],
     "Exclude": [
         "don't use underscores in Go names",
