Explicitly set which linters are enabled

--- a/gometalinter.config
+++ b/gometalinter.config
@@ -1,9 +1,24 @@
 {
     "Disable": [
+        "goconst",
         "gocyclo",
+        "gosec",
         "maligned",
-        "megacheck",
-        "goconst"
+        "megacheck"
+    ],
+    "Enable": [
+        "deadcode",
+        "errcheck",
+        "golint",
+        "gotype",
+        "gotypex",
+        "ineffassign",
+        "interfacer",
+        "structcheck",
+        "unconvert",
+        "varcheck",
+        "vet",
+        "vetshadow"
     ],
     "Exclude": [
         "don't use underscores in Go names",
