Check gofmt on lint

--- a/gometalinter.config
+++ b/gometalinter.config
@@ -9,6 +9,7 @@
     "Enable": [
         "deadcode",
         "errcheck",
+        "gofmt",
         "golint",
         "gotype",
         "gotypex",
