--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,11 +18,8 @@ install:
       appveyor DownloadFile https://github.com/golangci/golangci-lint/releases/download/v1.21.0/golangci-lint-1.21.0-windows-amd64.zip
       Expand-Archive golangci-lint-1.21.0-windows-amd64.zip
       Move-Item golangci-lint-1.21.0-windows-amd64\golangci-lint-1.21.0-windows-amd64\golangci-lint.exe $env:GOPATH\bin\golangci-lint.exe
-  - ps: |
-      $env:GO111MODULE="off"
-      go get -u github.com/prometheus/promu
-      go get -u github.com/josephspurrier/goversioninfo/cmd/goversioninfo
-      $env:GO111MODULE="on"
+  - go install github.com/prometheus/promu@v0.11.1
+  - go install github.com/josephspurrier/goversioninfo/cmd/goversioninfo@v1.2.0
 
 test_script:
   - make test
