Added doc for Scheduled Task collector
Signed-off-by: Rahman Mousavian <rahman.mousavian@oracle.com>

--- a/docs/example_config.yml
+++ b/docs/example_config.yml
@@ -5,6 +5,8 @@ collectors:
 collector:
   service:
     services-where: Name='windows_exporter'
+  scheduled_task:
+    blacklist: /Microsoft/.+
 log:
   level: debug
 scrape:
