golangci-lint: Acknowledge all remaining checks and update golanci-lint to v1.43.0
Signed-off-by: Mario Trangoni <mjtrangoni@gmail.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -3,11 +3,10 @@ linters:
   enable:
   - deadcode
   - errcheck
-  - golint
+  - revive
   - govet
   - gofmt
   - ineffassign
-  - interfacer
   - structcheck
   - unconvert
   - varcheck
@@ -20,4 +19,7 @@ issues:
   - # Golint has many capitalisation complaints on WMI class names
     text: "`?\\w+`? should be `?\\w+`?"
     linters:
-    - golint
+    - revive
+  - text: "don't use ALL_CAPS in Go names; use CamelCase"
+    linters:
+    - revive
