codespell: add GH Action for checking spelling issues
After fixing all spelling issues in #892, this will prevent us for
adding new ones.

Signed-off-by: Mario Trangoni <mjtrangoni@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,11 +60,24 @@ jobs:
         if: ${{ failure() }}
         run: golangci-lint run --timeout=5m -c .golangci.yaml
 
+  codespell:
+    name: Check for spelling errors
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: codespell-project/actions-codespell@master
+        with:
+          check_filenames: true
+          # When using this Action in other repos, the --skip option below can be removed
+          skip: ./.git
+          ignore_words_list: calle
+
   build:
     runs-on: windows-2019
     needs:
       - test
       - lint
+      - codespell
     steps:
       - uses: actions/checkout@v2
         with:
