--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ permissions:
   contents: read
   packages: write
   
+env:
+  PROMU_VER: 'v0.13.0'
+
 jobs:
   test:
     runs-on: windows-2019
@@ -29,7 +32,7 @@ jobs:
 
       - name: Install e2e deps
         run: |
-          go install github.com/prometheus/promu@v0.11.1
+          go install "github.com/prometheus/promu@$($Env:PROMU_VER)"
           go install github.com/josephspurrier/goversioninfo/cmd/goversioninfo@v1.2.0
           # GOPATH\bin dir must be appended to PATH else the `promu` command won't be found
           echo "$(go env GOPATH)\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -56,7 +59,7 @@ jobs:
           Expand-Archive -Path prometheus-$($Env:PROMTOOL_VER).windows-amd64.zip -DestinationPath .
           Copy-Item -Path prometheus-$($Env:PROMTOOL_VER).windows-amd64\promtool.exe -Destination "$(go env GOPATH)\bin"
 
-          go install github.com/prometheus/promu@v0.11.1
+          go install "github.com/prometheus/promu@$($Env:PROMU_VER)"
           go install github.com/josephspurrier/goversioninfo/cmd/goversioninfo@v1.2.0
           # GOPATH\bin dir must be appended to PATH else the `promu` command won't be found
           echo "$(go env GOPATH)\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -122,7 +125,7 @@ jobs:
       - name: Install Build deps
         run: |
           dotnet tool install --global GitVersion.Tool --version 5.*
-          go get github.com/prometheus/promu@v0.11.1
+          go get "github.com/prometheus/promu@$($Env:PROMU_VER)"
           go get github.com/josephspurrier/goversioninfo/cmd/goversioninfo@v1.2.0
           # GOPATH\bin dir must be added to PATH else the `promu` and `goversioninfo` commands won't be found
           echo "$(go env GOPATH)\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
