--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,11 @@
 name: windows_exporter CI/CD
 
-# Trigger on pull requests and releases
+# Trigger on pull requests, releases and pushes to master branch.
 # Deployments will only occur for releases (see `if` clauses in the build job).
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
@@ -170,7 +173,7 @@ jobs:
           promu checksum output\
 
       - name: Login to GitHub container registry
-        if: startsWith(github.ref, 'refs/tags/')
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
