--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,7 +187,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          VERSION=latest make push-all
+          $Env:VERSION = 'latest'
+          make push-all
 
       - name: Release
         if: startsWith(github.ref, 'refs/tags/')
