Don't spellcheck Go dependency files
Signed-off-by: Ben Reedy <breed808@breed808.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
         with:
           check_filenames: true
           # When using this Action in other repos, the --skip option below can be removed
-          skip: ./.git
+          skip: ./.git,go.mod,go.sum
           ignore_words_list: calle
 
   build:
