feat!: Deprecate whitelist/blacklist flags
Flags have been deprecated in favour of include/exclude terminology.

Signed-off-by: Ben Reedy <breed808@breed808.com>

--- a/docs/example_config.yml
+++ b/docs/example_config.yml
@@ -6,7 +6,7 @@ collector:
   service:
     services-where: Name='windows_exporter'
   scheduled_task:
-    blacklist: /Microsoft/.+
+    include: /Microsoft/.+
 log:
   level: debug
 scrape:
