Fix telemetry.addr deprecated since v0.21.0
Signed-off-by: Elpatii <4057711+Elpatii@users.noreply.github.com>

--- a/docs/example_config.yml
+++ b/docs/example_config.yml
@@ -12,6 +12,7 @@ log:
 scrape:
   timeout-margin: 0.5
 telemetry:
-  addr: ":9182"
   path: /metrics
   max-requests: 5
+web:
+  listen-address: ":9182"
