--- a/kubernetes/windows-exporter-daemonset.yaml
+++ b/kubernetes/windows-exporter-daemonset.yaml
@@ -21,7 +21,7 @@ spec:
       hostNetwork: true
       initContainers:
         - name: configure-firewall
-          image: mcr.microsoft.com/windows/nanoserver:1809
+          image: mcr.microsoft.com/powershell:lts-nanoserver-1809
           command: ["powershell"]
           args: ["New-NetFirewallRule", "-DisplayName", "'windows-exporter'", "-Direction", "inbound", "-Profile", "Any", "-Action", "Allow", "-LocalPort", "9182", "-Protocol", "TCP"]
       containers:
