fix: Create a monitoring namespace if it does not exist in windows exporter daemonset
Signed-off-by: bragi92 <kadubey@microsoft.com>

--- a/kubernetes/windows-exporter-daemonset.yaml
+++ b/kubernetes/windows-exporter-daemonset.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring
+  labels:
+    name: monitoring
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
