--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,6 +23,7 @@ on:
       - master
 
 env:
+  GO_VER: '^1.21.1'
   PROMU_VER: '0.14.0'
   PROMTOOL_VER: '2.43.0'
 
@@ -33,7 +34,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.20.2'
+          go-version: ${{ env.GO_VER }}
 
       - name: Test
         run: make test
@@ -57,7 +58,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.20.2'
+          go-version: ${{ env.GO_VER }}
 
       - name: Install promtool
         run: |
@@ -89,7 +90,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.20.2'
+          go-version: ${{ env.GO_VER }}
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
