--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.21.1'
+          go-version-file: 'go.mod'
 
       - name: Install Build deps
         run: |
