--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -18,3 +18,4 @@ jobs:
           days-before-stale: 90
           days-before-close: 30
           enable-statistics: true
+          operations-per-run: 100
