CI: set operations-per-run to 500
Signed-off-by: Jan-Otto Kröpke <github@jkroepke.de>

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -17,5 +17,5 @@ jobs:
           exempt-issue-labels: 'lifecycle/frozen'
           days-before-stale: 90
           days-before-close: 30
-          enable-statistics: true
-          operations-per-run: 100
+          enable-statistics: false
+          operations-per-run: 500
