--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,12 +18,12 @@ jobs:
   build:
     runs-on: windows-2022
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           # fetch-depth required for gitversion in `Build` step
           fetch-depth: 0
 
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
 
@@ -50,6 +50,7 @@ jobs:
           $ErrorActionPreference = "Stop"
 
           dotnet-gitversion /output json /showvariable FullSemVer | Set-Content VERSION -PassThru
+          $Version = Get-Content VERSION
           
           make crossbuild
           # '+' symbols are invalid characters in image tags
@@ -61,7 +62,7 @@ jobs:
           }
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: windows_exporter_binaries
           path: output\windows_exporter-*.exe
@@ -84,7 +85,7 @@ jobs:
 
       - name: Login to GitHub container registry
         if: ${{ github.event_name != 'pull_request' }}
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
