Remove unused `*prometheus.Desc` return value from collectors `collect()` function (#1475)

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,14 +1,16 @@
 linters:
   disable-all: true
   enable:
-  - deadcode
   - errcheck
   - revive
   - govet
   - gofmt
   - ineffassign
   - unconvert
-  - varcheck
+  - nilnil
+  - nilerr
+  - unparam
+  - loggercheck
 
 issues:
   exclude:
