--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,10 @@ name: Releases
 
 # Trigger on releases.
 on:
+  push:
+    branches:
+      - master
+  pull_request:
   release:
     types:
       - published
@@ -68,7 +72,7 @@ jobs:
           path: output\windows_exporter-*.exe
 
       - name: Build Release Artifacts
-        if: startsWith(github.ref, 'refs/tags/')
+        if: ${{ github.event_name != 'pull_request' }}
         run: |
           $ErrorActionPreference = "Stop"
           $BuildVersion = Get-Content VERSION
@@ -83,6 +87,31 @@ jobs:
 
           promu checksum output\
 
+      - name: Build Docker Artifacts
+        run: make build-all
+        env:
+          VERSION: >-
+            ${{
+              startsWith(github.ref, 'refs/tags/') && 'latest' || 
+              (
+                github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || github.ref_name
+              )
+            }}
+
+      - name: Login to Docker Hub
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_LOGIN }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+      - name: Login to Docker Hub
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: docker/login-action@v3
+        with:
+          username: '$token'
+          password: ${{ secrets.QUAY_IO_API_TOKEN }}
+
       - name: Login to GitHub container registry
         if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v3
@@ -95,8 +124,8 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ startsWith(github.ref, 'refs/tags/') && 'latest' || github.ref_name }}
         run: |
-          $Env:VERSION = 'latest'
           make push-all
 
       - name: Release
