--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,10 @@ jobs:
           $ErrorActionPreference = "Stop"
           $BuildVersion = Get-Content VERSION
           $TagName = $env:GITHUB_REF -replace 'refs/tags/', ''
+          
+          # The MSI version is not semver compliant, so just take the numerical parts
+          $MSIVersion = $TagName -replace '^v?([0-9\.]+).*$','$1'
+          
           foreach($Arch in "amd64", "arm64") {
             Write-Verbose "Building windows_exporter $MSIVersion msi for $Arch"
             .\installer\build.ps1 -PathToExecutable .\output\windows_exporter-$BuildVersion-$Arch.exe -Version $MSIVersion -Arch "$Arch"
