--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,13 +106,13 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_LOGIN }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      - name: Login to Docker Hub
-        if: ${{ github.event_name != 'pull_request' }}
-        uses: docker/login-action@v3
-        with:
-          registry: quay.io
-          username: 'robot'
-          password: ${{ secrets.QUAY_IO_API_TOKEN }}
+      #- name: Login to quay.io
+      #  if: ${{ github.event_name != 'pull_request' }}
+      #  uses: docker/login-action@v3
+      #  with:
+      #    registry: quay.io
+      #    username: 'robot'
+      #    password: ${{ secrets.QUAY_IO_API_TOKEN }}
 
       - name: Login to GitHub container registry
         if: ${{ github.event_name != 'pull_request' }}
