--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,31 @@ jobs:
         with:
           go-version-file: 'go.mod'
 
+      # https://github.com/pl4nty/Windows-Containers/blob/Main/helpful_tools/Install-BuildKit-GitHubActions/workflow.yaml
+      - name: Setup containerd
+        run: |
+          $version = "1.7.17"
+          curl.exe -L https://github.com/containerd/containerd/releases/download/v$version/containerd-$version-windows-amd64.tar.gz -o containerd.tar.gz
+          tar.exe xvf containerd.tar.gz
+          .\bin\containerd.exe --register-service
+          Start-Service containerd
+      - name: Setup BuildKit
+        run: |
+          $version = "v0.13.2"
+          curl.exe -L https://github.com/moby/buildkit/releases/download/$version/buildkit-$version.windows-amd64.tar.gz -o buildkit.tar.gz
+          tar.exe xvf buildkit.tar.gz
+          
+          .\bin\buildkitd.exe --register-service
+          Start-Service buildkitd
+      - name: Setup Docker Buildx
+        run: |
+          $version = "v0.14.1"
+          curl.exe -L https://github.com/docker/buildx/releases/download/$version/buildx-$version.windows-amd64.exe -o $env:ProgramData\Docker\cli-plugins\docker-buildx.exe
+      - uses: docker/setup-buildx-action@v3
+        with:
+          driver: remote
+          endpoint: npipe:////./pipe/buildkitd
+
       - name: Install WiX
         run: dotnet tool install --global wix
 
