logical_disk: Fix failed to get disk ID for dynamic volumes (#1544)

--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -29,3 +29,18 @@ jobs:
           docs
           chore
           && exit 1
+  title:
+    name: check title prefix
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: check
+        run: |
+          PR_TITLE_PREFIX=$(echo "$PR_TITLE" | cut -d':' -f1)
+          if [[ ! -d "pkg/collector/$PR_TITLE_PREFIX" ]] || [[ "$PR_TITLE_PREFIX" == "chore" ]] || [[ "$PR_TITLE_PREFIX" == "*" ]]; then
+            echo "PR title must start with an name of an collector package"
+            echo "Example: 'logical_disk: description'"
+            exit 1
+          fi
+        env:
+          PR_TITLE: ${{ github.event.pull_request.title }}
