--- a/docs/example_config.yml
+++ b/docs/example_config.yml
@@ -1,7 +1,7 @@
 ---
 # Note this is not an exhaustive list of all configuration values
 collectors:
-  enabled: cpu,cs,logical_disk,net,os,service,system,textfile
+  enabled: cpu,cs,logical_disk,net,os,service,system
 collector:
   service:
     services-where: Name='windows_exporter'
