--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
         run: |
           $ErrorActionPreference = "Stop"
           
-          $Version = git describe --tag
+          $Version = git describe --tags --always
           $Version = $Version -replace 'v', ''
           # '+' symbols are invalid characters in image tags
           $Version = $Version -replace '\+', '_'
