installer: Add UI + Replace `ADD_FIREWALL_EXCEPTION` with `ADDLOCAL=FirewallException` (#1611)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,7 @@ jobs:
       - name: Install WiX extensions
         run: |
           wix extension add -g WixToolset.Util.wixext
+          wix extension add -g WixToolset.Ui.wixext
           wix extension add -g WixToolset.Firewall.wixext
 
       - name: Install Build deps
